# testrepo

./: .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-test-pypi.yml  pypi.yml
docs/: conf.py  index.rst
testpkg/: __init__.py
